[gd_scene load_steps=3 format=3 uid="uid://br26w6mwqilyr"]

[ext_resource type="Script" uid="uid://dvmrp0ohbbg5l" path="res://src/Game/Menu/MultiplayerMenu/DirectConnectionEntry.gd" id="1_8v0qa"]
[ext_resource type="PackedScene" uid="uid://dcsy6w6ow2xxg" path="res://src/Game/Menu/MultiplayerMenu/SecretEdit.tscn" id="2_3yivm"]

[node name="DirectConnectionEntry" type="HBoxContainer" node_paths=PackedStringArray("ip_edit", "name_edit", "connect_button", "delete_button")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_8v0qa")
ip_edit = NodePath("SecretEdit")
name_edit = NodePath("EditName")
connect_button = NodePath("Connect")
delete_button = NodePath("Delete")

[node name="EditName" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Game1"
max_length = 32
editable = false

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="SecretEdit" parent="." instance=ExtResource("2_3yivm")]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="Connect" type="Button" parent="."]
layout_mode = 2
text = "MP_DIRECT_CONNECT"

[node name="Edit" type="CheckButton" parent="."]
layout_mode = 2
text = "MP_DIRECT_EDIT"

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = "MP_DIRECT_DELETE"

[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="toggled" from="Edit" to="EditName" method="set_editable"]
[connection signal="toggled" from="Edit" to="SecretEdit" method="set_editable"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
